# libyaml-dom

./: CMakeLists.txt  LICENSE  README
cmake/Modules/: FindLibYAML.cmake
example/: common.c  common.h  edit.c  scratch.c  setup.c  setup.h
src/: clean.c  dump.c  gen.c  list.h  yamldom.h
